--- a/vp_tools.html
+++ b/vp_tools.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!--公共header-->
-    <header class="bg-white fixed sn-header text-left">
+    <header class="bg-white  sn-header text-left">
         <div class="wrap clear-fix">
             <a href="javascript:void (0);" data-url="index" class="js_location_url">
                 <div class="logo fl">
@@ -30,7 +30,7 @@
                         <ul class="sub-menu-item ">
                             <li>
                                 <a href="javascript:void(0);" data-url="platform" class="js_location_url">
-                                   云授权平台
+                                    云授权平台
                                 </a>
                             </li>
                             <li>
@@ -149,181 +149,96 @@
         </div>
     </header>
 
-    <!--轮播图-->
-    <div class="swiper-container">
-        <div class="swiper-wrapper">
-            <div class="swiper-slide ">
-                <div class="sn-swiper-item">
-                    <div class="sn-si-title">
-                        <p>深思安全授权平台</p>
-                        <p>助您轻松转变商业模式变客户为用户。</p>
-                    </div>
-                    <img src="images/slides/1.jpg">
-                </div>
-            </div>
-            <div class="swiper-slide  ">
-                <div class="sn-swiper-item">
-                    <div class="sn-si-title">
-                        <p>深思安全授权平台</p>
-                        <p>即时授权，提升用户体验，软件保护“零成本”。</p>
-                    </div>
-                    <img src="images/slides/2.jpg">
-                </div>
-            </div>
-            <div class="swiper-slide  ">
-                <div class="sn-swiper-item">
-                    <div class="sn-si-title">
-                        <p>深思安全授权平台</p>
-                        <p>精准掌握所有软件授权的使用情况。</p>
-                    </div>
-                    <img src="images/slides/3.jpg">
-                </div>
-            </div>
-            <div class="swiper-slide">
-                <div class="sn-swiper-item">
-                    <div class="sn-si-title">
-                        <p>深思安全授权平台</p>
-                        <p>顶级安全技术，全自动加密引擎，远离盗版。</p>
-                    </div>
-                    <img src="images/slides/4.jpg">
-                </div>
-            </div>
-        </div>
-        <div class="swiper-pagination"></div>
-    </div>
+    <!--container -->
+    <img width="100%" src="images/vp_tools/desc.jpg">
 
-    <!--container-->
-    <section class="sn-phc-menu ">
-        <div class="wrap clear-fix ">
-            <p class="sn-phcm-title">深思云授权助力软件企业互联网化</p>
-            <ul class="sn-phcm-list">
-                <li>
-                    <a href="#sn_phc_menu_1">
-                        <img src="images/home/icon_1.png">
-                        <p>授权管理</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#sn_phc_menu_2">
-                        <img src="images/home/icon_2.png">
-                        <p>软件加密</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#sn_phc_menu_3">
-                        <img src="images/home/icon_3.png">
-                        <p>统计分析</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#sn_phc_menu_4">
-                        <img src="images/home/icon_4.png">
-                        <p>身份认证</p>
-                    </a>
-                </li>
-            </ul>
+    <!--page bar 所在位置-->
+    <section class="sn-page-bar">
+        <div class="cloud"></div>
+        <div class="wrap text-left sn-pb-content">
+            <span>您现在所在的位置：</span>
+            <span>产品</span> <span>></span>
+            <span>专业工具</span>   <span>></span>
+            <span class="active">VIRBOX PROTECTOR</span>    <span>|</span>
+            <span><a class="js_location_url" data-url="auth_tools" href="javascript:void(0)">授权管理工具</a></span>    <span>|</span>
+            <span><a class="js_location_url" data-url="user_tools"  href="javascript:void(0)">用户工具</a></span>
         </div>
     </section>
 
-    <section id="sn_phc_menu_1" class="sn-phc-item border-bottom-grey">
+    <!--container list-->
+    <section id="sn_vpc_menu_1" class="sn-phc-item border-bottom-grey">
         <div class="wrap clear-fix text-left">
-            <div class="snphc-desc fl">
-                <div class="snphc-tag">授权管理</div>
-                <div class="snphc-title">依靠行业领先的、安全灵活的授权管理程序，更快发展软件入云业务。</div>
-                <div class="snphc-abstract">
-                    你所发行的任何软件，用户都可以实现即付即用或全功能的免费试用。通过云授权服务，你发行给用户的软件授权全部都能即时生效。<br>
-                    用户可以获得全程无障碍体验。是否选用加密锁，由用户决定，版权保护实现“零”成本。
-                </div>
-                <div class="snphc-link">
-                    <a class="color-orange" href="">详情了解云授权服务></a><br>
-                    <a class="color-orange" href="">云授权平台介绍></a><br>
-                </div>
-            </div>
-            <div class="snphc-img fr">
-                <img class="snphc-img" src="images/home/img_1.jpg">
-            </div>
-        </div>
-    </section>
-
-    <section id="sn_phc_menu_2" class="sn-phc-item border-bottom-grey">
-        <div class="wrap clear-fix text-left">
-            <div class="snphc-desc fl">
-                <div class="snphc-tag">软件加密</div>
-                <div class="snphc-title">在数分钟内，使你的软件获得顶级的加密保护。</div>
-                <div class="snphc-abstract">
-                    全自动的加密工具，内含世界一流的安全虚拟机引擎。通过深思专有的自动代码移植技术，使你的软件拥有最强大的抗破解能力。
-                    不论使用云锁还是硬件加密锁，体验都是一致的，只需要加密一次。
-                </div>
-                <div class="snphc-link">
-                    <a class="color-orange js_location_url" data-url="vp_tools"  href="javascript:void(0);">详细了解Virbox Protector></a><br>
-                </div>
-            </div>
-            <div class="snphc-img fr">
-                <img class="snphc-img" src="images/home/img_2.jpg">
-            </div>
-        </div>
-    </section>
-
-
-    <section id="sn_phc_menu_3" class="sn-phc-item border-bottom-grey">
-        <div class="wrap clear-fix text-left">
-            <div class="snphc-desc fl">
-                <div class="snphc-tag">统计分析</div>
-                <div class="snphc-title">准确、即时跟踪软件模块的使用情况， 了解用户使用习惯和偏好。</div>
-                <div class="snphc-abstract">
-                    云授权跟踪服务，可以准确跟踪你授权的每个软件模块的实际使用情况，包括使用频率、地域等。 所获取的数据仅涉及授权本身，不会触及任何用户的数据。
+            <div class="snphc-desc fr">
+                <div class="snphc-title-2 color-black-3">VIRBOX PROTECTOR</div>
+                <div class="snphc-abstract color-black-3">
+                    Virbox Protector与深思云锁或精锐5配套使用，集自动代码移植、虚拟化、外壳加密、数据加密与一身，是业界领先的软件保护工具。Virbox Protector具有高度的灵活性和自动化能力，开发者只需要简单的操作，就可以使被保护的软件达到专业级水准。
                     <br>
-                    同时，授权的使用信息也是加密的，只有你所在的组织才能查阅。
+                    Virbox Protector加密后的软件，开发者就可以公开发布，任何用户都可以下载。但是，在开发者使用授权管理工具为某个特定的用户或者组织发放授权之前，软件是不能被使用的。
+                    <br>
+                    开发者也可以为保护后的软件发放试用授权，允许用户在设定的条件下进行试用。
                 </div>
                 <div class="snphc-link">
+                    <!--<a class="color-orange" href="">详情了解云授权服务></a><br>-->
+                    <!--<a class="color-orange" href="">云授权平台介绍></a><br>-->
                 </div>
             </div>
-            <div class="snphc-img fr">
-                <img class="snphc-img" src="images/home/img_3.jpg">
+            <div class="snphc-img fl">
+                <img class="snphc-img" src="images/vp_tools/1.jpg">
             </div>
         </div>
     </section>
 
-    <section id="sn_phc_menu_4" class="sn-phc-item border-bottom-grey">
+    <section id="sn_vpc_menu_2" class="sn-phc-item border-bottom-grey">
         <div class="wrap clear-fix text-left">
-            <div class="snphc-desc fl">
-                <div class="snphc-tag">身份认证</div>
-                <div class="snphc-title">保护用户的云帐号安全。</div>
-                <div class="snphc-abstract">
-                    每个用户所持有的精锐5加密锁，都可以提供不亚于网上银行安全等级的身份认证能力。因此，你为用户提供的云服务，例如基于云的业务系统，可以利用加密锁原生的身份认证功能，最大程度保护用户帐号的安全性。
-                    <br/>
-                    每个精锐5出厂时都带有标识唯一身份的密钥和对应的数字证书，你可以直接使用它完成云帐号的身份认证，最大程度简化了身份认证系统的部署难度。
+            <div class="snphc-desc fr">
+                <div class="snphc-title-2 color-black-3 margin-t-20">试用版</div>
+                <div class="snphc-abstract color-black-3">
+                    任何开发者都可以在注册后试用Virbox Protector。但是，试用版本只是提供给开发者最基本的演示能力，与正式版相比，试用版的安全性要低很多。
+                    <br>
+                    在任何时候都不能将Virbox Protector试用版加密后的软件正式发布，因为任何其他开发者都可以为试用版加密后的软件发布授权。Virbox Protector的试用版本仅用于测试目的，如果需要正式使用，就必须获得正式的开发者ID和正式版本的Virbox Protector。
                 </div>
                 <div class="snphc-link">
                 </div>
             </div>
-            <div class="snphc-img fr">
-                <img class="snphc-img" src="images/home/img_4.jpg">
+            <div class="snphc-img fl">
+                <img class="snphc-img" src="images/vp_tools/2.jpg">
             </div>
         </div>
     </section>
 
+    <section id="sn_vpc_menu_3" class="sn-phc-item border-bottom-grey">
+        <div class="wrap clear-fix text-left">
+            <div class="snphc-desc fr">
+                <div class="snphc-title-2 color-black-3 margin-t-20">获得正式版</div>
+                <div class="snphc-abstract color-black-3">
+                    我们为每个正式的开发者提供专用的Virbox Protector版本，以确保每个加密方案都是独特的，这可以最大程度保护软件的安全性。
+                    <br>
+                    所以，绝对不要把你所获得的正式版Virbox Protector泄露出去，否则将大大不利于你的软件产品的版权保护。
+                </div>
+                <div class="snphc-link">
+                    <a class="color-orange js_location_url" href="javascript:void(0);" data-url="register" >注册成为正式开发者 》</a><br>
+                </div>
+            </div>
+            <div class="snphc-img fl">
+                <img class="snphc-img" src="images/vp_tools/3.jpg">
+            </div>
+        </div>
+    </section>
 
-
-    <!--合作伙伴-->
-    <section class="sn-partners">
-        <div class="wrap clear-fix">
-            <p class="sm-p-title">我们的合作伙伴</p>
-            <ul class="sm-p-list">
-                <li><a href="javascript:void(0);"><img src="images/partners/p_1.png"></a></li>
-                <li><a href="javascript:void(0);"><img src="images/partners/p_2.png"></a></li>
-                <li><a href="javascript:void(0);"><img src="images/partners/p_3.png"></a></li>
-                <li><a href="javascript:void(0);"><img src="images/partners/p_4.png"></a></li>
-                <li><a href="javascript:void(0);"><img src="images/partners/p_5.png"></a></li>
-                <li><a href="javascript:void(0);"><img src="images/partners/p_6.png"></a></li>
-                <li><a href="javascript:void(0);"><img src="images/partners/p_7.png"></a></li>
-                <li><a href="javascript:void(0);"><img src="images/partners/p_8.png"></a></li>
-                <li><a href="javascript:void(0);"><img src="images/partners/p_9.png"></a></li>
-                <li><a href="javascript:void(0);"><img src="images/partners/p_10.png"></a></li>
-                <li><a href="javascript:void(0);"><img src="images/partners/p_11.png"></a></li>
-                <li><a href="javascript:void(0);"><img src="images/partners/p_12.png"></a></li>
-                <li><a href="javascript:void(0);"><img src="images/partners/p_13.png"></a></li>
-            </ul>
+    <section id="sn_vpc_menu_4" class="sn-phc-item border-bottom-grey">
+        <div class="wrap clear-fix text-left">
+            <div class="snphc-desc fr">
+                <div class="snphc-title-2 color-black-3 margin-t-20 ">了解更多</div>
+                <div class="snphc-abstract color-black-3">
+                    Virbox Protector对于初学者来说非常简单和易用，几乎不需要特别的加密知识就可以将软件保护做好。对于专家而言，Virbox Protector也提供了强大的定制化能力。
+                </div>
+                <div class="snphc-link">
+                    <a class="color-orange js_location_url" data-url="vp_doc_download"  href="javascript:void(0);">Virbox Protector文档下载 》</a><br>
+                </div>
+            </div>
+            <div class="snphc-img fl">
+                <img class="snphc-img" src="images/vp_tools/4.jpg">
+            </div>
         </div>
     </section>
 
@@ -392,9 +307,11 @@
                 <li>
                     <img width="138" src="images/qr-code.jpg">
                 </li>
-             </ul>
+            </ul>
         </div>
     </section>
+
+
 
     <!--公共footer-->
     <footer class="sn-footer">
@@ -413,14 +330,13 @@
     <!--公共浮层-->
     <aside class="sn-fix-menu">
         <div class="mask"></div>
-        <a class="qq clear-fix" id='BizQQWPA' href="javascript:void(0);"></a>
+        <a class="qq clear-fix" id='BizQQWPA' href="javascript:void(0); "></a>
         <a class="mobile" href="tel:400-6506-701"></a>
         <a class="qr" href="javascript:void(0); ">
             <img src="images/float_layer/qr.png">
         </a>
         <a id="sn_go_top" class="up" href="javascript:void(0); "></a>
     </aside>
-
 
     <script src="scripts/jquery.min.js"></script>
     <script src="scripts/swiper-3.3.1.jquery.min.js"></script>
