--- a/platform.html
+++ b/platform.html
@@ -140,7 +140,6 @@
                         <li><a href="javascript:void(0);" data-url="we_recruit" class="js_location_url" >诚聘精英</a></li>
                     </ul>
                 </div>
-                <div>商城</div>
                 <div class="bg-slide" ></div>
             </nav>
             <div class="action fr">
@@ -150,7 +149,7 @@
     </header>
 
     <!--container -->
-    <img width="100%" src="images/vp_tools/desc.jpg">
+    <img width="100%" src="images/platform/plat_desc.jpg">
 
     <!--page bar 所在位置-->
     <section class="sn-page-bar">
@@ -159,96 +158,111 @@
             <span>您现在所在的位置：</span>
             <span>产品</span> <span>></span>
             <span>专业工具</span>   <span>></span>
-            <span class="active">VIRBOX PROTECTOR</span>    <span>|</span>
-            <span><a class="js_location_url" data-url="auth_tools" href="javascript:void(0)">授权管理工具</a></span>    <span>|</span>
-            <span><a class="js_location_url" data-url="user_tools"  href="javascript:void(0)">用户工具</a></span>
+            <span class="active">云授权平台介绍</span>
         </div>
     </section>
 
     <!--container list-->
-    <section id="sn_vpc_menu_1" class="sn-phc-item border-bottom-grey">
+    <section  class="sn-phc-item border-bottom-grey">
         <div class="wrap clear-fix text-left">
-            <div class="snphc-desc fr">
+            <div class="snphc-desc fl">
                 <div class="sn-phcd-center">
-                    <div class="snphc-title-2 color-black-3">VIRBOX PROTECTOR</div>
+                    <div class="snphc-title color-black-3"></div>
+                    <div class="snphc-title-2 color-black-3"></div>
                     <div class="snphc-abstract color-black-3">
-                        Virbox Protector与深思云锁或精锐5配套使用，集自动代码移植、虚拟化、外壳加密、数据加密与一身，是业界领先的软件保护工具。Virbox Protector具有高度的灵活性和自动化能力，开发者只需要简单的操作，就可以使被保护的软件达到专业级水准。
-                        <br>
-                        Virbox Protector加密后的软件，开发者就可以公开发布，任何用户都可以下载。但是，在开发者使用授权管理工具为某个特定的用户或者组织发放授权之前，软件是不能被使用的。
-                        <br>
-                        开发者也可以为保护后的软件发放试用授权，允许用户在设定的条件下进行试用。
+                    </div>
+                    <div class="snphc-content line-height-30 color-black-3">
+                        过去，做软件不用加密锁，就会被盗。<br/>
+                        用了加密锁，能解决盗版，可是也带来一堆伤脑筋的问题：<br/>
+                        ■ 加密锁采购需要成本。<br/>
+                        ■ 需要专人管理加密锁：采购、出入库、生产设置…<br/>
+                        ■ 发货周期长，用户等得心烦不说，还得负担越来越高的快递费。<br/>
+                        ■ 加密是个技术活儿，没有专业人才也没法儿跟黑客持续对抗。<br/>
                     </div>
                     <div class="snphc-link">
-                        <!--<a class="color-orange" href="">详情了解云授权服务></a><br>-->
-                        <!--<a class="color-orange" href="">云授权平台介绍></a><br>-->
                     </div>
                 </div>
             </div>
-            <div class="snphc-img fl">
-                <img class="snphc-img" src="images/vp_tools/1.jpg">
+            <div class="snphc-img fr">
+                <img class="snphc-img" src="images/platform/plat_1.jpg">
             </div>
         </div>
     </section>
 
-    <section id="sn_vpc_menu_2" class="sn-phc-item border-bottom-grey">
+    <section  class="sn-phc-item border-bottom-grey">
         <div class="wrap clear-fix text-left">
             <div class="snphc-desc fr">
                 <div class="sn-phcd-center">
-                    <div class="snphc-title-2 color-black-3 ">试用版</div>
+                    <div class="snphc-title color-black-3"></div>
+                    <div class="snphc-title-2 color-black-3"></div>
                     <div class="snphc-abstract color-black-3">
-                        任何开发者都可以在注册后试用Virbox Protector。但是，试用版本只是提供给开发者最基本的演示能力，与正式版相比，试用版的安全性要低很多。
-                        <br>
-                        在任何时候都不能将Virbox Protector试用版加密后的软件正式发布，因为任何其他开发者都可以为试用版加密后的软件发布授权。Virbox Protector的试用版本仅用于测试目的，如果需要正式使用，就必须获得正式的开发者ID和正式版本的Virbox Protector。
+                    </div>
+                    <div class="snphc-content line-height-30 color-black-3">
+                        现在，有了深思云授权平台，一切都迎刃而解。<br/>
+                        <img class="snphc-img" src="images/platform/plat_2_txt.jpg"><br/>
+                        软件可以快速交付给用户，再也不用管加密锁的事儿了！<br/>
+                        加密安全交给深思负责，他们有一整套专业的安全软件和服务。<br/>
                     </div>
                     <div class="snphc-link">
                     </div>
                 </div>
             </div>
             <div class="snphc-img fl">
-                <img class="snphc-img" src="images/vp_tools/2.jpg">
+                <img class="snphc-img" src="images/platform/plat_2.jpg">
             </div>
         </div>
     </section>
 
-    <section id="sn_vpc_menu_3" class="sn-phc-item border-bottom-grey">
+
+    <section  class="sn-phc-item border-bottom-grey">
         <div class="wrap clear-fix text-left">
-            <div class="snphc-desc fr">
+            <div class="snphc-desc fl">
                 <div class="sn-phcd-center">
-                    <div class="snphc-title-2 color-black-3 ">获得正式版</div>
+                    <div class="snphc-title color-black-3"></div>
+                    <div class="snphc-title-2 color-black-3"></div>
                     <div class="snphc-abstract color-black-3">
-                        我们为每个正式的开发者提供专用的Virbox Protector版本，以确保每个加密方案都是独特的，这可以最大程度保护软件的安全性。
-                        <br>
-                        所以，绝对不要把你所获得的正式版Virbox Protector泄露出去，否则将大大不利于你的软件产品的版权保护。
+                    </div>
+                    <div class="snphc-content line-height-30 color-black-3">
+                        除了省心、省力、省钱，还有意想不到的好处：<br/>
+                        强大的授权管理功能，什么试用、租用、按需付费、弹性授权等，瞬间解决。<br/>
+                        哪些功能用的多，哪些用的少，用户地理分布的情况，全盘掌握。<br/>
+                        软件直接授权给用户的账号，爱在哪儿用就在哪儿用，随心所欲。<br/>
                     </div>
                     <div class="snphc-link">
-                        <a class="color-orange js_location_url" href="javascript:void(0);" data-url="register" >注册成为正式开发者 》</a><br>
                     </div>
                 </div>
             </div>
-            <div class="snphc-img fl">
-                <img class="snphc-img" src="images/vp_tools/3.jpg">
+            <div class="snphc-img fr">
+                <img class="snphc-img" src="images/platform/plat_3.jpg">
             </div>
         </div>
     </section>
 
-    <section id="sn_vpc_menu_4" class="sn-phc-item border-bottom-grey">
+    <section  class="sn-phc-item border-bottom-grey">
         <div class="wrap clear-fix text-left">
             <div class="snphc-desc fr">
                 <div class="sn-phcd-center">
-                    <div class="snphc-title-2 color-black-3  ">了解更多</div>
+                    <div class="snphc-title color-black-3"></div>
+                    <div class="snphc-title-2 color-black-3"></div>
                     <div class="snphc-abstract color-black-3">
-                        Virbox Protector对于初学者来说非常简单和易用，几乎不需要特别的加密知识就可以将软件保护做好。对于专家而言，Virbox Protector也提供了强大的定制化能力。
+                    </div>
+                    <div class="snphc-content line-height-30 color-black-3">
+                        要是用户自己想要个加密锁，方便管理和提升体验怎么办？<br/>
+                        用户自己找深思买就得了，需要服务也找深思。<br/>
+                        已经发出的授权可以在云上用，也可以下载到加密锁里用。<br/>
+                        安全么？放心，比过去那样买了加密锁再交给客户，安全性只高不低。<br/>
                     </div>
                     <div class="snphc-link">
-                        <a class="color-orange js_location_url" data-url="vp_doc_download"  href="javascript:void(0);">Virbox Protector文档下载 》</a><br>
                     </div>
                 </div>
             </div>
             <div class="snphc-img fl">
-                <img class="snphc-img" src="images/vp_tools/4.jpg">
+                <img class="snphc-img" src="images/platform/plat_4.jpg">
             </div>
         </div>
     </section>
+
+
 
     <!--公共 site maps-->
     <section class="sn-site-map clear-fix">
@@ -318,8 +332,6 @@
             </ul>
         </div>
     </section>
-
-
 
     <!--公共footer-->
     <footer class="sn-footer">
