--- a/index.html
+++ b/index.html
@@ -140,7 +140,6 @@
                         <li><a href="javascript:void(0);" data-url="we_recruit" class="js_location_url" >诚聘精英</a></li>
                     </ul>
                 </div>
-                <div>商城</div>
                 <div class="bg-slide" ></div>
             </nav>
             <div class="action fr">
@@ -150,7 +149,7 @@
     </header>
 
     <!--轮播图-->
-    <div class="swiper-container">
+    <div class="swiper-container ">
         <div class="swiper-wrapper">
             <div class="swiper-slide ">
                 <div class="sn-swiper-item">
@@ -190,6 +189,8 @@
             </div>
         </div>
         <div class="swiper-pagination"></div>
+        <div class="swiper-button-prev sn-pre-btn"></div>
+        <div class="swiper-button-next sn-next-btn"></div>
     </div>
 
     <!--container-->
@@ -228,15 +229,18 @@
     <section id="sn_phc_menu_1" class="sn-phc-item border-bottom-grey">
         <div class="wrap clear-fix text-left">
             <div class="snphc-desc fl">
-                <div class="snphc-tag">授权管理</div>
-                <div class="snphc-title">依靠行业领先的、安全灵活的授权管理程序，更快发展软件入云业务。</div>
-                <div class="snphc-abstract">
-                    你所发行的任何软件，用户都可以实现即付即用或全功能的免费试用。通过云授权服务，你发行给用户的软件授权全部都能即时生效。<br>
-                    用户可以获得全程无障碍体验。是否选用加密锁，由用户决定，版权保护实现“零”成本。
-                </div>
-                <div class="snphc-link">
-                    <a class="color-orange" href="">详情了解云授权服务></a><br>
-                    <a class="color-orange" href="">云授权平台介绍></a><br>
+                <div class="sn-phcd-center">
+
+                    <div class="snphc-tag">授权管理</div>
+                    <div class="snphc-title">依靠行业领先的、安全灵活的授权管理程序，更快发展软件入云业务。</div>
+                    <div class="snphc-abstract">
+                        你所发行的任何软件，用户都可以实现即付即用或全功能的免费试用。通过云授权服务，你发行给用户的软件授权全部都能即时生效。<br>
+                        用户可以获得全程无障碍体验。是否选用加密锁，由用户决定，版权保护实现“零”成本。
+                    </div>
+                    <div class="snphc-link">
+                        <a class="color-orange js_location_url" data-url="about_platform" href="javascript:void(0);">详情了解云授权服务></a><br>
+                        <a class="color-orange js_location_url" data-url="platform" href="javascript:void(0);">云授权平台介绍></a><br>
+                    </div>
                 </div>
             </div>
             <div class="snphc-img fr">
@@ -248,14 +252,17 @@
     <section id="sn_phc_menu_2" class="sn-phc-item border-bottom-grey">
         <div class="wrap clear-fix text-left">
             <div class="snphc-desc fl">
-                <div class="snphc-tag">软件加密</div>
-                <div class="snphc-title">在数分钟内，使你的软件获得顶级的加密保护。</div>
-                <div class="snphc-abstract">
-                    全自动的加密工具，内含世界一流的安全虚拟机引擎。通过深思专有的自动代码移植技术，使你的软件拥有最强大的抗破解能力。
-                    不论使用云锁还是硬件加密锁，体验都是一致的，只需要加密一次。
-                </div>
-                <div class="snphc-link">
-                    <a class="color-orange js_location_url" data-url="vp_tools"  href="javascript:void(0);">详细了解Virbox Protector></a><br>
+                <div class="sn-phcd-center">
+
+                    <div class="snphc-tag">软件加密</div>
+                    <div class="snphc-title">在数分钟内，使你的软件获得顶级的加密保护。</div>
+                    <div class="snphc-abstract">
+                        全自动的加密工具，内含世界一流的安全虚拟机引擎。通过深思专有的自动代码移植技术，使你的软件拥有最强大的抗破解能力。
+                        不论使用云锁还是硬件加密锁，体验都是一致的，只需要加密一次。
+                    </div>
+                    <div class="snphc-link">
+                        <a class="color-orange js_location_url" data-url="vp_tools"  href="javascript:void(0);">详细了解Virbox Protector></a><br>
+                    </div>
                 </div>
             </div>
             <div class="snphc-img fr">
@@ -268,14 +275,17 @@
     <section id="sn_phc_menu_3" class="sn-phc-item border-bottom-grey">
         <div class="wrap clear-fix text-left">
             <div class="snphc-desc fl">
-                <div class="snphc-tag">统计分析</div>
-                <div class="snphc-title">准确、即时跟踪软件模块的使用情况， 了解用户使用习惯和偏好。</div>
-                <div class="snphc-abstract">
-                    云授权跟踪服务，可以准确跟踪你授权的每个软件模块的实际使用情况，包括使用频率、地域等。 所获取的数据仅涉及授权本身，不会触及任何用户的数据。
-                    <br>
-                    同时，授权的使用信息也是加密的，只有你所在的组织才能查阅。
-                </div>
-                <div class="snphc-link">
+                <div class="sn-phcd-center">
+
+                    <div class="snphc-tag">统计分析</div>
+                    <div class="snphc-title">准确、即时跟踪软件模块的使用情况， 了解用户使用习惯和偏好。</div>
+                    <div class="snphc-abstract">
+                        云授权跟踪服务，可以准确跟踪你授权的每个软件模块的实际使用情况，包括使用频率、地域等。 所获取的数据仅涉及授权本身，不会触及任何用户的数据。
+                        <br>
+                        同时，授权的使用信息也是加密的，只有你所在的组织才能查阅。
+                    </div>
+                    <div class="snphc-link">
+                    </div>
                 </div>
             </div>
             <div class="snphc-img fr">
@@ -287,14 +297,17 @@
     <section id="sn_phc_menu_4" class="sn-phc-item border-bottom-grey">
         <div class="wrap clear-fix text-left">
             <div class="snphc-desc fl">
-                <div class="snphc-tag">身份认证</div>
-                <div class="snphc-title">保护用户的云帐号安全。</div>
-                <div class="snphc-abstract">
-                    每个用户所持有的精锐5加密锁，都可以提供不亚于网上银行安全等级的身份认证能力。因此，你为用户提供的云服务，例如基于云的业务系统，可以利用加密锁原生的身份认证功能，最大程度保护用户帐号的安全性。
-                    <br/>
-                    每个精锐5出厂时都带有标识唯一身份的密钥和对应的数字证书，你可以直接使用它完成云帐号的身份认证，最大程度简化了身份认证系统的部署难度。
-                </div>
-                <div class="snphc-link">
+                <div class="sn-phcd-center">
+
+                    <div class="snphc-tag">身份认证</div>
+                    <div class="snphc-title">保护用户的云帐号安全。</div>
+                    <div class="snphc-abstract">
+                        每个用户所持有的精锐5加密锁，都可以提供不亚于网上银行安全等级的身份认证能力。因此，你为用户提供的云服务，例如基于云的业务系统，可以利用加密锁原生的身份认证功能，最大程度保护用户帐号的安全性。
+                        <br/>
+                        每个精锐5出厂时都带有标识唯一身份的密钥和对应的数字证书，你可以直接使用它完成云帐号的身份认证，最大程度简化了身份认证系统的部署难度。
+                    </div>
+                    <div class="snphc-link">
+                    </div>
                 </div>
             </div>
             <div class="snphc-img fr">
