--- a/platform_intro.html
+++ b/platform_intro.html
@@ -140,7 +140,6 @@
                         <li><a href="javascript:void(0);" data-url="we_recruit" class="js_location_url" >诚聘精英</a></li>
                     </ul>
                 </div>
-                <div>商城</div>
                 <div class="bg-slide" ></div>
             </nav>
             <div class="action fr">
@@ -150,7 +149,7 @@
     </header>
 
     <!--container -->
-    <img width="100%" src="images/vp_tools/desc.jpg">
+    <img width="100%" src="images/platform/plat_desc.jpg">
 
     <!--page bar 所在位置-->
     <section class="sn-page-bar">
@@ -158,97 +157,83 @@
         <div class="wrap text-left sn-pb-content">
             <span>您现在所在的位置：</span>
             <span>产品</span> <span>></span>
-            <span>专业工具</span>   <span>></span>
-            <span class="active">VIRBOX PROTECTOR</span>    <span>|</span>
-            <span><a class="js_location_url" data-url="auth_tools" href="javascript:void(0)">授权管理工具</a></span>    <span>|</span>
-            <span><a class="js_location_url" data-url="user_tools"  href="javascript:void(0)">用户工具</a></span>
+            <span>云授权</span>   <span>></span>
+            <span class="active">了解云授权平台</span>
         </div>
     </section>
 
     <!--container list-->
-    <section id="sn_vpc_menu_1" class="sn-phc-item border-bottom-grey">
+    <section  class="sn-phc-item border-bottom-grey">
         <div class="wrap clear-fix text-left">
             <div class="snphc-desc fr">
                 <div class="sn-phcd-center">
-                    <div class="snphc-title-2 color-black-3">VIRBOX PROTECTOR</div>
+                    <div class="snphc-title color-black-3"></div>
+                    <div class="snphc-title-2 color-black-3">什么是云授权平台</div>
                     <div class="snphc-abstract color-black-3">
-                        Virbox Protector与深思云锁或精锐5配套使用，集自动代码移植、虚拟化、外壳加密、数据加密与一身，是业界领先的软件保护工具。Virbox Protector具有高度的灵活性和自动化能力，开发者只需要简单的操作，就可以使被保护的软件达到专业级水准。
+                        基于云的软件授权管理系统，给任意用户发行软件授权并管理其完整生命周期。用户可以在任何时间、任何地点、任何设备上使用已经获得的软件授权，而不再像过去一样只能将软件安装到特定的计算机上。
                         <br>
-                        Virbox Protector加密后的软件，开发者就可以公开发布，任何用户都可以下载。但是，在开发者使用授权管理工具为某个特定的用户或者组织发放授权之前，软件是不能被使用的。
-                        <br>
-                        开发者也可以为保护后的软件发放试用授权，允许用户在设定的条件下进行试用。
+                        在云授权平台中，软件授权是用户的“资产”。用户既可以在云端使用，也可以将授权下载到自己的加密锁中以获得更好的体验。这一切都是安全的，无需担心授权被非法复制、滥用或越界，也不再用担心因授权丢失而导致的复杂处理过程。
                     </div>
                     <div class="snphc-link">
-                        <!--<a class="color-orange" href="">详情了解云授权服务></a><br>-->
-                        <!--<a class="color-orange" href="">云授权平台介绍></a><br>-->
+                        <a class="color-orange js_location_url" data-url="platform" href="javascript:void(0);">云授权平台介绍></a><br>
                     </div>
                 </div>
             </div>
             <div class="snphc-img fl">
-                <img class="snphc-img" src="images/vp_tools/1.jpg">
+                <img class="snphc-img" src="images/platform/intro_1.jpg">
             </div>
         </div>
     </section>
 
-    <section id="sn_vpc_menu_2" class="sn-phc-item border-bottom-grey">
+    <section  class="sn-phc-item border-bottom-grey">
         <div class="wrap clear-fix text-left">
             <div class="snphc-desc fr">
                 <div class="sn-phcd-center">
-                    <div class="snphc-title-2 color-black-3 ">试用版</div>
+                    <div class="snphc-title color-black-3"></div>
+                    <div class="snphc-title-2 color-black-3">如何使用</div>
                     <div class="snphc-abstract color-black-3">
-                        任何开发者都可以在注册后试用Virbox Protector。但是，试用版本只是提供给开发者最基本的演示能力，与正式版相比，试用版的安全性要低很多。
+                        只需在深思云授权平台上注册开发者账号，并获得正式的开发者ID，就可以立即使用深思云授权平台所带来的一切便利。
                         <br>
-                        在任何时候都不能将Virbox Protector试用版加密后的软件正式发布，因为任何其他开发者都可以为试用版加密后的软件发布授权。Virbox Protector的试用版本仅用于测试目的，如果需要正式使用，就必须获得正式的开发者ID和正式版本的Virbox Protector。
+                        完整的过程仅需要：加密、发布、授权三个步骤，可以100%通过工具实现，开发者甚至不需要为此编写任何一行代码！
+                        <br>
+                        我们也提供了完整的SDK和API接口供开发者使用，开发者可以借此满足自己更高级和个性化的需求。
                     </div>
                     <div class="snphc-link">
+                        <!--<a class="color-orange js_location_url" data-url="platform" href="javascript:void(0);">注册成为正式开发商></a><br>-->
                     </div>
                 </div>
             </div>
             <div class="snphc-img fl">
-                <img class="snphc-img" src="images/vp_tools/2.jpg">
+                <img class="snphc-img" src="images/platform/intro_2.jpg">
             </div>
         </div>
     </section>
 
-    <section id="sn_vpc_menu_3" class="sn-phc-item border-bottom-grey">
+    <section  class="sn-phc-item border-bottom-grey">
         <div class="wrap clear-fix text-left">
             <div class="snphc-desc fr">
                 <div class="sn-phcd-center">
-                    <div class="snphc-title-2 color-black-3 ">获得正式版</div>
+                    <div class="snphc-title color-black-3"></div>
+                    <div class="snphc-title-2 color-black-3">成本与费用</div>
                     <div class="snphc-abstract color-black-3">
-                        我们为每个正式的开发者提供专用的Virbox Protector版本，以确保每个加密方案都是独特的，这可以最大程度保护软件的安全性。
+                    </div>
+                    <div class="snphc-content line-height-30 color-black-3">
+                        单纯的云授权服务是免费的，例如开发者向用户发行在线的试用授权，双方都无需支付任何费用。
                         <br>
-                        所以，绝对不要把你所获得的正式版Virbox Protector泄露出去，否则将大大不利于你的软件产品的版权保护。
+                        如果用户希望使用加密锁以获得更好的离线体验，因为加密锁是100％远程操作的，所以用户可以自己购买。
+                        <br>
+                        开发者再也不必负担加密锁购买成本、生产管理成本、快递成本、锁售后支持成本！
                     </div>
                     <div class="snphc-link">
-                        <a class="color-orange js_location_url" href="javascript:void(0);" data-url="register" >注册成为正式开发者 》</a><br>
                     </div>
                 </div>
             </div>
             <div class="snphc-img fl">
-                <img class="snphc-img" src="images/vp_tools/3.jpg">
+                <img class="snphc-img" src="images/platform/intro_3.jpg">
             </div>
         </div>
     </section>
 
-    <section id="sn_vpc_menu_4" class="sn-phc-item border-bottom-grey">
-        <div class="wrap clear-fix text-left">
-            <div class="snphc-desc fr">
-                <div class="sn-phcd-center">
-                    <div class="snphc-title-2 color-black-3  ">了解更多</div>
-                    <div class="snphc-abstract color-black-3">
-                        Virbox Protector对于初学者来说非常简单和易用，几乎不需要特别的加密知识就可以将软件保护做好。对于专家而言，Virbox Protector也提供了强大的定制化能力。
-                    </div>
-                    <div class="snphc-link">
-                        <a class="color-orange js_location_url" data-url="vp_doc_download"  href="javascript:void(0);">Virbox Protector文档下载 》</a><br>
-                    </div>
-                </div>
-            </div>
-            <div class="snphc-img fl">
-                <img class="snphc-img" src="images/vp_tools/4.jpg">
-            </div>
-        </div>
-    </section>
 
     <!--公共 site maps-->
     <section class="sn-site-map clear-fix">
@@ -318,8 +303,6 @@
             </ul>
         </div>
     </section>
-
-
 
     <!--公共footer-->
     <footer class="sn-footer">
