--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
 
             <ul class="sn-sm-item">
                 <li class="title js_location_url" data-url="index" >深思数盾</li>
-                <li><a class="info  open_qq"  href="javascript:void(0);"><img src="images/icons/qq.png">QQ</a></li>
+                <li><a id="BizQQWPA2"  class="info"  href="javascript:void(0);"><img src="images/icons/qq.png">QQ</a></li>
                 <li><a class="info js_location_url"  data-url="wechat" href="javascript:void(0); "><img src="images/icons/wechat.png">微信</a></li>
                 <li><a class="info js_location_url"  data-url="area" href="javascript:void(0);"><img src="images/icons/area.png">选择地图</a></li>
             </ul>
