--- a/we_route.html
+++ b/we_route.html
@@ -149,102 +149,89 @@
     </header>
 
     <!--container -->
-    <img width="100%" src="images/vp_tools/desc.jpg">
+    <img width="100%" src="images/sense.jpg">
 
     <!--page bar 所在位置-->
     <section class="sn-page-bar">
         <div class="cloud"></div>
         <div class="wrap text-left sn-pb-content">
             <span>您现在所在的位置：</span>
-            <span>产品</span> <span>></span>
-            <span>专业工具</span>   <span>></span>
-            <span class="active">VIRBOX PROTECTOR</span>    <span>|</span>
-            <span><a class="js_location_url" data-url="auth_tools" href="javascript:void(0)">授权管理工具</a></span>    <span>|</span>
-            <span><a class="js_location_url" data-url="user_tools"  href="javascript:void(0)">用户工具</a></span>
+            <span>我们</span> <span>></span>
+            <span class="active">成长历程</span>
         </div>
     </section>
 
     <!--container list-->
-    <section id="sn_vpc_menu_1" class="sn-phc-item border-bottom-grey">
-        <div class="wrap clear-fix text-left">
-            <div class="snphc-desc fr">
-                <div class="sn-phcd-center">
-                    <div class="snphc-title-2 color-black-3">VIRBOX PROTECTOR</div>
-                    <div class="snphc-abstract color-black-3">
-                        Virbox Protector与深思云锁或精锐5配套使用，集自动代码移植、虚拟化、外壳加密、数据加密与一身，是业界领先的软件保护工具。Virbox Protector具有高度的灵活性和自动化能力，开发者只需要简单的操作，就可以使被保护的软件达到专业级水准。
-                        <br>
-                        Virbox Protector加密后的软件，开发者就可以公开发布，任何用户都可以下载。但是，在开发者使用授权管理工具为某个特定的用户或者组织发放授权之前，软件是不能被使用的。
-                        <br>
-                        开发者也可以为保护后的软件发放试用授权，允许用户在设定的条件下进行试用。
-                    </div>
-                    <div class="snphc-link">
-                        <!--<a class="color-orange" href="">详情了解云授权服务></a><br>-->
-                        <!--<a class="color-orange" href="">云授权平台介绍></a><br>-->
-                    </div>
-                </div>
-            </div>
-            <div class="snphc-img fl">
-                <img class="snphc-img" src="images/vp_tools/1.jpg">
-            </div>
-        </div>
-    </section>
-
-    <section id="sn_vpc_menu_2" class="sn-phc-item border-bottom-grey">
-        <div class="wrap clear-fix text-left">
-            <div class="snphc-desc fr">
-                <div class="sn-phcd-center">
-                    <div class="snphc-title-2 color-black-3 ">试用版</div>
-                    <div class="snphc-abstract color-black-3">
-                        任何开发者都可以在注册后试用Virbox Protector。但是，试用版本只是提供给开发者最基本的演示能力，与正式版相比，试用版的安全性要低很多。
-                        <br>
-                        在任何时候都不能将Virbox Protector试用版加密后的软件正式发布，因为任何其他开发者都可以为试用版加密后的软件发布授权。Virbox Protector的试用版本仅用于测试目的，如果需要正式使用，就必须获得正式的开发者ID和正式版本的Virbox Protector。
-                    </div>
-                    <div class="snphc-link">
-                    </div>
-                </div>
-            </div>
-            <div class="snphc-img fl">
-                <img class="snphc-img" src="images/vp_tools/2.jpg">
-            </div>
-        </div>
-    </section>
-
-    <section id="sn_vpc_menu_3" class="sn-phc-item border-bottom-grey">
-        <div class="wrap clear-fix text-left">
-            <div class="snphc-desc fr">
-                <div class="sn-phcd-center">
-                    <div class="snphc-title-2 color-black-3 ">获得正式版</div>
-                    <div class="snphc-abstract color-black-3">
-                        我们为每个正式的开发者提供专用的Virbox Protector版本，以确保每个加密方案都是独特的，这可以最大程度保护软件的安全性。
-                        <br>
-                        所以，绝对不要把你所获得的正式版Virbox Protector泄露出去，否则将大大不利于你的软件产品的版权保护。
-                    </div>
-                    <div class="snphc-link">
-                        <a class="color-orange js_location_url" href="javascript:void(0);" data-url="register" >注册成为正式开发者 》</a><br>
-                    </div>
-                </div>
-            </div>
-            <div class="snphc-img fl">
-                <img class="snphc-img" src="images/vp_tools/3.jpg">
-            </div>
-        </div>
-    </section>
-
-    <section id="sn_vpc_menu_4" class="sn-phc-item border-bottom-grey">
-        <div class="wrap clear-fix text-left">
-            <div class="snphc-desc fr">
-                <div class="sn-phcd-center">
-                    <div class="snphc-title-2 color-black-3  ">了解更多</div>
-                    <div class="snphc-abstract color-black-3">
-                        Virbox Protector对于初学者来说非常简单和易用，几乎不需要特别的加密知识就可以将软件保护做好。对于专家而言，Virbox Protector也提供了强大的定制化能力。
-                    </div>
-                    <div class="snphc-link">
-                        <a class="color-orange js_location_url" data-url="vp_doc_download"  href="javascript:void(0);">Virbox Protector文档下载 》</a><br>
-                    </div>
-                </div>
-            </div>
-            <div class="snphc-img fl">
-                <img class="snphc-img" src="images/vp_tools/4.jpg">
+    <section class="sn-we-route text-left">
+        <div class="wrap">
+            <p class="sn-wr-title">成长历程</p>
+            <div class="sn-wr-list">
+                <i class="icon-time"></i>
+                <ul class="sn-wr-item" data-group="2016年">
+                    <li>深思软件安全二十载，面向互联网在启航（待确认）</li>
+                    <li>深思数盾成为高通公司软件版权保护领域忠实合作伙伴</li>
+                </ul>
+                <ul class="sn-wr-item" data-group="2015年">
+                    <li>深思数盾加密锁产品通过CE和FCC认证</li>
+                    <li>互联网+重新定义加密锁：精锐5加密锁产品问世</li>
+                </ul>
+                <ul class="sn-wr-item" data-group="2014年">
+                    <li>深思将32位ARM全球最强芯片用到加密锁，精锐4S—全球第一款 CC EAL5+ 和 EMVo双重安全标准的加密锁诞生。</li>
+                    <li>再次获得了二项发明专利及二项实用新型专利</li>
+                    <li>让专业更专注，深思助力科大讯飞智能语音及语言技术研究安全性能提升</li>
+                    <li>深思助力海康威视实现视频处理技术和视频分析技术的版权保护</li>
+                </ul>
+                <ul class="sn-wr-item" data-group="2013年">
+                    <li>新的售后服务体系开始运行</li>
+                    <li>深思全球客户总数突破5000家</li>
+                    <li>获北京市专利示范单位</li>
+                </ul>
+                <ul class="sn-wr-item" data-group="2012年">
+                    <li>获北京市中小企业国际开拓资金支持</li>
+                    <li>获国家火炬计划产业示范项目证书</li>
+                    <li>获北京市海淀区专利专项资助资金</li>
+                    <li>获信用评级A级单位</li>
+                </ul>
+                <ul class="sn-wr-item" data-group="2011年">
+                    <li>获中关村2011年度专利商标促进资金支持</li>
+                    <li>入选中国绿色电子产品生产企业</li>
+                    <li>获巴黎国际发明展览会（列宾竞赛）铜奖</li>
+                </ul>
+                <ul class="sn-wr-item" data-group="2010年">
+                    <li>成为北京市知识产权保护协会会员</li>
+                    <li>获得海淀区科技项目（基本计划）资金支持</li>
+                    <li>在研项目列入《国家高新技术产业发展项目计划》，并获得专项扶持资金800万</li>
+                    <li>与清华大学合作成立“清华-深思图像识别与高速图像处理联合研究中心”</li>
+                </ul>
+                <ul class="sn-wr-item" data-group="2009年">
+                    <li>获国家高新技术企业认证</li>
+                    <li>获得专利促进资金支持</li>
+                </ul>
+                <ul class="sn-wr-item" data-group="2007年">
+                    <li>获科技部中小企业创新基金80万元无偿资助</li>
+                    <li>获中关村创新基金45万元无偿资助</li>
+                    <li>获“软件中国2006年度风云榜”活动“十大最具创新性技术”奖</li>
+                    <li>获软件企业资格认定</li>
+                </ul>
+                <ul class="sn-wr-item" data-group="2006年">
+                    <li>入选中关村“瞪羚计划”成为“瞪羚”企业</li>
+                </ul>
+                <ul class="sn-wr-item" data-group="2005年">
+                    <li>首次通过ISO9001：2008认证</li>
+                    <li>软件保护解决方案获得中国软件产品认定业</li>
+                </ul>
+                <ul class="sn-wr-item" data-group="2003年">
+                    <li>智能卡产品通过中国金融认证中心CFCA认证</li>
+                </ul>
+                <ul class="sn-wr-item" data-group="2000年">
+                    <li>产品获得中国人民共和国公安部颁发的销售许可证</li>
+                </ul>
+                <ul class="sn-wr-item" data-group="1996年">
+                    <li>参与发起中国软件联盟（CSA）</li>
+                </ul>
+                <ul class="sn-wr-item" data-group="1995年">
+                    <li>加入北京市新技术产业开发试验区，成为高新技术产业</li>
+                </ul>
             </div>
         </div>
     </section>
