--- a/locks.html
+++ b/locks.html
@@ -149,7 +149,7 @@
     </header>
 
     <!--container -->
-    <img width="100%" src="images/platform/plat_desc.jpg">
+    <img width="100%" src="images/slides/4.jpg">
 
     <!--page bar 所在位置-->
     <section class="sn-page-bar">
@@ -157,112 +157,84 @@
         <div class="wrap text-left sn-pb-content">
             <span>您现在所在的位置：</span>
             <span>产品</span> <span>></span>
-            <span>专业工具</span>   <span>></span>
-            <span class="active">云授权平台介绍</span>
+            <span class="active">硬件加密锁</span>
         </div>
     </section>
 
     <!--container list-->
-    <section  class="sn-phc-item border-bottom-grey">
-        <div class="wrap clear-fix text-left">
-            <div class="snphc-desc fl">
-                <div class="sn-phcd-center">
-                    <div class="snphc-title color-black-3"></div>
-                    <div class="snphc-title-2 color-black-3"></div>
-                    <div class="snphc-abstract color-black-3">
-                    </div>
-                    <div class="snphc-content line-height-30 color-black-3">
-                        过去，做软件不用加密锁，就会被盗。<br/>
-                        用了加密锁，能解决盗版，可是也带来一堆伤脑筋的问题：<br/>
-                        ■ 加密锁采购需要成本。<br/>
-                        ■ 需要专人管理加密锁：采购、出入库、生产设置…<br/>
-                        ■ 发货周期长，用户等得心烦不说，还得负担越来越高的快递费。<br/>
-                        ■ 加密是个技术活儿，没有专业人才也没法儿跟黑客持续对抗。<br/>
-                    </div>
-                    <div class="snphc-link">
-                    </div>
-                </div>
-            </div>
-            <div class="snphc-img fr">
-                <img class="snphc-img" src="images/platform/plat_1.jpg">
-            </div>
-        </div>
-    </section>
-
-    <section  class="sn-phc-item border-bottom-grey">
-        <div class="wrap clear-fix text-left">
-            <div class="snphc-desc fr">
-                <div class="sn-phcd-center">
-                    <div class="snphc-title color-black-3"></div>
-                    <div class="snphc-title-2 color-black-3"></div>
-                    <div class="snphc-abstract color-black-3">
-                    </div>
-                    <div class="snphc-content line-height-30 color-black-3">
-                        现在，有了深思云授权平台，一切都迎刃而解。<br/>
-                        <img class="snphc-img" src="images/platform/plat_2_txt.jpg"><br/>
-                        软件可以快速交付给用户，再也不用管加密锁的事儿了！<br/>
-                        加密安全交给深思负责，他们有一整套专业的安全软件和服务。<br/>
-                    </div>
-                    <div class="snphc-link">
-                    </div>
-                </div>
-            </div>
-            <div class="snphc-img fl">
-                <img class="snphc-img" src="images/platform/plat_2.jpg">
-            </div>
-        </div>
-    </section>
-
-
-    <section  class="sn-phc-item border-bottom-grey">
-        <div class="wrap clear-fix text-left">
-            <div class="snphc-desc fl">
-                <div class="sn-phcd-center">
-                    <div class="snphc-title color-black-3"></div>
-                    <div class="snphc-title-2 color-black-3"></div>
-                    <div class="snphc-abstract color-black-3">
-                    </div>
-                    <div class="snphc-content line-height-30 color-black-3">
-                        除了省心、省力、省钱，还有意想不到的好处：<br/>
-                        强大的授权管理功能，什么试用、租用、按需付费、弹性授权等，瞬间解决。<br/>
-                        哪些功能用的多，哪些用的少，用户地理分布的情况，全盘掌握。<br/>
-                        软件直接授权给用户的账号，爱在哪儿用就在哪儿用，随心所欲。<br/>
-                    </div>
-                    <div class="snphc-link">
-                    </div>
-                </div>
-            </div>
-            <div class="snphc-img fr">
-                <img class="snphc-img" src="images/platform/plat_3.jpg">
-            </div>
-        </div>
-    </section>
-
-    <section  class="sn-phc-item border-bottom-grey">
-        <div class="wrap clear-fix text-left">
-            <div class="snphc-desc fr">
-                <div class="sn-phcd-center">
-                    <div class="snphc-title color-black-3"></div>
-                    <div class="snphc-title-2 color-black-3"></div>
-                    <div class="snphc-abstract color-black-3">
-                    </div>
-                    <div class="snphc-content line-height-30 color-black-3">
-                        要是用户自己想要个加密锁，方便管理和提升体验怎么办？<br/>
-                        用户自己找深思买就得了，需要服务也找深思。<br/>
-                        已经发出的授权可以在云上用，也可以下载到加密锁里用。<br/>
-                        安全么？放心，比过去那样买了加密锁再交给客户，安全性只高不低。<br/>
-                    </div>
-                    <div class="snphc-link">
-                    </div>
-                </div>
-            </div>
-            <div class="snphc-img fl">
-                <img class="snphc-img" src="images/platform/plat_4.jpg">
+    <section class="sn-we-route text-left">
+        <div class="wrap">
+            <p class="sn-wr-title">成长历程</p>
+            <div class="sn-wr-list">
+                <i class="icon-time"></i>
+                <ul class="sn-wr-item" data-group="2016年">
+                    <li>深思软件安全二十载，面向互联网在启航（待确认）</li>
+                    <li>深思数盾成为高通公司软件版权保护领域忠实合作伙伴</li>
+                </ul>
+                <ul class="sn-wr-item" data-group="2015年">
+                    <li>深思数盾加密锁产品通过CE和FCC认证</li>
+                    <li>互联网+重新定义加密锁：精锐5加密锁产品问世</li>
+                </ul>
+                <ul class="sn-wr-item" data-group="2014年">
+                    <li>深思将32位ARM全球最强芯片用到加密锁，精锐4S—全球第一款 CC EAL5+ 和 EMVo双重安全标准的加密锁诞生。</li>
+                    <li>再次获得了二项发明专利及二项实用新型专利</li>
+                    <li>让专业更专注，深思助力科大讯飞智能语音及语言技术研究安全性能提升</li>
+                    <li>深思助力海康威视实现视频处理技术和视频分析技术的版权保护</li>
+                </ul>
+                <ul class="sn-wr-item" data-group="2013年">
+                    <li>新的售后服务体系开始运行</li>
+                    <li>深思全球客户总数突破5000家</li>
+                    <li>获北京市专利示范单位</li>
+                </ul>
+                <ul class="sn-wr-item" data-group="2012年">
+                    <li>获北京市中小企业国际开拓资金支持</li>
+                    <li>获国家火炬计划产业示范项目证书</li>
+                    <li>获北京市海淀区专利专项资助资金</li>
+                    <li>获信用评级A级单位</li>
+                </ul>
+                <ul class="sn-wr-item" data-group="2011年">
+                    <li>获中关村2011年度专利商标促进资金支持</li>
+                    <li>入选中国绿色电子产品生产企业</li>
+                    <li>获巴黎国际发明展览会（列宾竞赛）铜奖</li>
+                </ul>
+                <ul class="sn-wr-item" data-group="2010年">
+                    <li>成为北京市知识产权保护协会会员</li>
+                    <li>获得海淀区科技项目（基本计划）资金支持</li>
+                    <li>在研项目列入《国家高新技术产业发展项目计划》，并获得专项扶持资金800万</li>
+                    <li>与清华大学合作成立“清华-深思图像识别与高速图像处理联合研究中心”</li>
+                </ul>
+                <ul class="sn-wr-item" data-group="2009年">
+                    <li>获国家高新技术企业认证</li>
+                    <li>获得专利促进资金支持</li>
+                </ul>
+                <ul class="sn-wr-item" data-group="2007年">
+                    <li>获科技部中小企业创新基金80万元无偿资助</li>
+                    <li>获中关村创新基金45万元无偿资助</li>
+                    <li>获“软件中国2006年度风云榜”活动“十大最具创新性技术”奖</li>
+                    <li>获软件企业资格认定</li>
+                </ul>
+                <ul class="sn-wr-item" data-group="2006年">
+                    <li>入选中关村“瞪羚计划”成为“瞪羚”企业</li>
+                </ul>
+                <ul class="sn-wr-item" data-group="2005年">
+                    <li>首次通过ISO9001：2008认证</li>
+                    <li>软件保护解决方案获得中国软件产品认定业</li>
+                </ul>
+                <ul class="sn-wr-item" data-group="2003年">
+                    <li>智能卡产品通过中国金融认证中心CFCA认证</li>
+                </ul>
+                <ul class="sn-wr-item" data-group="2000年">
+                    <li>产品获得中国人民共和国公安部颁发的销售许可证</li>
+                </ul>
+                <ul class="sn-wr-item" data-group="1996年">
+                    <li>参与发起中国软件联盟（CSA）</li>
+                </ul>
+                <ul class="sn-wr-item" data-group="1995年">
+                    <li>加入北京市新技术产业开发试验区，成为高新技术产业</li>
+                </ul>
             </div>
         </div>
     </section>
-
-
 
     <!--公共 site maps-->
     <section class="sn-site-map clear-fix">
@@ -332,6 +304,8 @@
             </ul>
         </div>
     </section>
+
+
 
     <!--公共footer-->
     <footer class="sn-footer">
