--- a/vp_tools.html
+++ b/vp_tools.html
@@ -8,145 +8,7 @@
     <script charset="utf-8" type="text/javascript" src="http://wpa.b.qq.com/cgi/wpa.php?key=XzkzODA1NDQ1OF8zNTQwMDNfNDAwNjUwNjcwMV8"></script>
 </head>
 <body>
-    <!--公共header-->
-    <header class="bg-white  sn-header text-left">
-        <div class="wrap clear-fix">
-            <a href="javascript:void (0);" data-url="index" class="js_location_url">
-                <div class="logo fl">
-                    <img src="images/logo/logo.png">
-                    <div class="logo-txt">
-                        <img src="images/logo/t-1.png">
-                        <img src="images/logo/t-2.png">
-                        <img src="images/logo/t-3.png">
-                        <img src="images/logo/t-4.png">
-                    </div>
-                </div>
-            </a>
-            <nav class="menu fl" >
-                <div class="m-item">
-                    <a href="javascript:void(0);"  data-url="products" class="js_location_url" >产品</a>
-                    <div class="sub-menu-group  ">
-                        <p class="sub-mg-title">欢迎试用深思数盾数据安全产品!</p>
-                        <ul class="sub-menu-item ">
-                            <li>
-                                <a href="javascript:void(0);" data-url="platform" class="js_location_url">
-                                    云授权平台
-                                </a>
-                            </li>
-                            <li>
-                                <a href="javascript:void(0);" data-url="about_platform" class="js_location_url">
-                                    <div class="sub-mi-title">了解云授权平台</div>
-                                    <div class="sub-mi-desc">基于云的软件授权服务，以用户授权的方式代替传统的软件，转变软件商业模式。</div>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="javascript:void(0);" data-url="cloud_lock" class="js_location_url">
-                                    <div class="sub-mi-title">云锁服务</div>
-                                    <div class="sub-mi-desc">与精锐5硬件加密锁完全一致的加密服务，永久免费，无需担负加密成本！</div>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="javascript:void(0);" data-url="ss_service" class="js_location_url">
-                                    <div class="sub-mi-title">SS安全服务</div>
-                                    <div class="sub-mi-desc">软件保护终极利器，云授权与硬件授权无缝切换体验。</div>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="javascript:void(0);" data-url="in_platform" class="js_location_url">
-                                    <div class="sub-mi-title">进入云授权管理中心</div>
-                                    <div class="sub-mi-desc">直接用云平台发行授权，即使生效，支持离线导入至硬件加密锁。</div>
-                                </a>
-                            </li>
-                        </ul>
-                        <ul class="sub-menu-item">
-                            <li>
-                                <a href="javascript:void(0);" data-url="tools" class="js_location_url" >
-                                    专业工具
-                                </a>
-                            </li>
-                            <li>
-                                <a href="javascript:void(0);" data-url="vp_tools" class="js_location_url" >
-                                    <div class="sub-mi-title">Virbox Protector</div>
-                                    <div class="sub-mi-desc">世界一流的自动化软件加密工具，拥有自动代码移植、虚拟化等核心安全技术。</div>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="javascript:void(0);" data-url="auth_tools" class="js_location_url" >
-                                    <div class="sub-mi-title">授权管理工具</div>
-                                    <div class="sub-mi-desc">协助软件企业管理软件授权的全生命周期，灵活而强大！</div>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="javascript:void(0);" data-url="user_tools" class="js_location_url" >
-                                    <div class="sub-mi-title">用户工具</div>
-                                    <div class="sub-mi-desc">方便用户管理自己的软件授权，同时具有高度智能化的“一键维护”功能，大幅度减少软件企业的维护成本。</div>
-                                </a>
-                            </li>
-                        </ul>
-                        <ul class="sub-menu-item">
-                            <li>
-                                <a href="javascript:void(0);"  data-url="locks" class="js_location_url" >
-                                    硬件加密锁
-                                </a>
-                            </li>
-                            <li>
-                                <a href="javascript:void(0);" data-url="picked_5" class="js_location_url" >
-                                    <div class="sub-mi-title">精锐5</div>
-                                    <div class="sub-mi-desc">软件版权保护与身份认证的旗舰产品。</div>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="javascript:void(0);" data-url="picked_4s" class="js_location_url" >
-                                    <div class="sub-mi-title">精锐4S</div>
-                                    <div class="sub-mi-desc">经典软件版权保护产品精锐4的升级版。</div>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="javascript:void(0);" data-url="picked_1" class="js_location_url" >
-                                    <div class="sub-mi-title">灵锐1</div>
-                                    <div class="sub-mi-desc">入门级硬件锁，成本优选。</div>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div>
-                    <a href="javascript:void(0);" data-url="solution" class="js_location_url" >解决方案</a>
-                    <ul class="sub-menu">
-                        <li><a href="javascript:void(0);" data-url="game_industry" class="js_location_url" >游戏行业</a></li>
-                        <li><a href="javascript:void(0);" data-url="manage_industry" class="js_location_url" >管理行业</a></li>
-                        <li><a href="javascript:void(0);" data-url="architecture_industry" class="js_location_url" >建筑行业</a></li>
-                        <li><a href="javascript:void(0);" data-url="edu_and_doc" class="js_location_url" >教育和文档</a></li>
-                        <li><a href="javascript:void(0);" data-url="common_industry" class="js_location_url" >通用行业</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <a href="javascript:void(0);" data-url="support" class="js_location_url" >支持</a>
-                    <ul class="sub-menu ">
-                        <li><a href="javascript:void(0);" data-url="su_download" class="js_location_url" >下载中心</a></li>
-                        <li><a href="javascript:void(0);" data-url="su_problem" class="js_location_url" >常见问题</a></li>
-                        <li><a href="javascript:void(0);" data-url="su_feedback" class="js_location_url" >建议反馈</a></li>
-                        <li><a href="javascript:void(0);" data-url="su_contact" class="js_location_url" >联系我们</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <a href="javascript:void(0);" data-url="we" class="js_location_url" >我们</a>
-                    <ul class="sub-menu ">
-                        <li><a href="javascript:void(0);" data-url="we_desc" class="js_location_url" >公司简介</a></li>
-                        <li><a href="javascript:void(0);" data-url="we_news" class="js_location_url" >公司新闻</a></li>
-                        <li><a href="javascript:void(0);" data-url="we_route" class="js_location_url" >成长历程</a></li>
-                        <li><a href="javascript:void(0);" data-url="we_intellectual" class="js_location_url" >知识产权</a></li>
-                        <li><a href="javascript:void(0);" data-url="we_property" class="js_location_url" >公司性质</a></li>
-                        <li><a href="javascript:void(0);" data-url="we_recruit" class="js_location_url" >诚聘精英</a></li>
-                    </ul>
-                </div>
-                <div class="bg-slide" ></div>
-            </nav>
-            <div class="action fr">
-                <a class="login js_location_url"  data-url="login" href="javascript:void(0);">云帐号登录</a>
-            </div>
-        </div>
-    </header>
+    <div id="header"></div>
 
     <!--container -->
     <img width="100%" src="images/vp_tools/desc.jpg">
@@ -156,7 +18,6 @@
         <div class="cloud"></div>
         <div class="wrap text-left sn-pb-content">
             <span>您现在所在的位置：</span>
-            <span>产品</span> <span>></span>
             <span>专业工具</span>   <span>></span>
             <span class="active">VIRBOX PROTECTOR</span>    <span>|</span>
             <span><a class="js_location_url" data-url="auth_tools" href="javascript:void(0)">授权管理工具</a></span>    <span>|</span>
@@ -220,7 +81,7 @@
                         所以，绝对不要把你所获得的正式版Virbox Protector泄露出去，否则将大大不利于你的软件产品的版权保护。
                     </div>
                     <div class="snphc-link">
-                        <a class="color-orange js_location_url" href="javascript:void(0);" data-url="register" >注册成为正式开发者 》</a><br>
+                        <a class="color-orange js_location_url" href="javascript:void(0);" data-url="register" >免费注册成为正式开发者 》</a><br>
                     </div>
                 </div>
             </div>
@@ -249,104 +110,10 @@
         </div>
     </section>
 
-    <!--公共 site maps-->
-    <section class="sn-site-map clear-fix">
-        <div class="wrap text-left">
-            <ul class="sn-sm-item">
-                <li class="title js_location_url" data-url="platform">云授权平台</li>
-                <li><a class="info js_location_url"  data-url="about_platform" href="javascript:void(0); ">了解云授权平台</a></li>
-                <li><a class="info js_location_url"  data-url="cloud_lock" href="javascript:void(0); ">云锁服务</a></li>
-                <li><a class="info js_location_url"  data-url="ss_service" href="javascript:void(0); ">SS安全服务</a></li>
-                <li><a class="info js_location_url"  data-url="in_platform" href="javascript:void(0); ">进入云授权管理中心</a></li>
-            </ul>
 
-            <ul class="sn-sm-item">
-                <li class="title js_location_url" data-url="tools">专业工具</li>
-                <li><a class="info js_location_url"  data-url="vp_tools" href="vp_tools.html">Virbox Protector</a></li>
-                <li><a class="info js_location_url"  data-url="auth_tools" href="javascript:void(0); ">用户授权工具</a></li>
-                <li><a class="info js_location_url"  data-url="user_tools" href="javascript:void(0); ">用户工具</a></li>
-            </ul>
-
-            <ul class="sn-sm-item">
-                <li class="title text-center js_location_url" data-url="picked_5" >硬件加密锁</li>
-                <li><a class="info js_location_url"  data-url="picked_5" href="javascript:void(0); ">精锐 5</a></li>
-                <li><a class="info js_location_url"  data-url="picked_4s" href="javascript:void(0); ">精锐 4S</a></li>
-                <li><a class="info js_location_url"  data-url="picked_1" href="javascript:void(0); ">灵锐 1</a></li>
-                <li><a class="info js_location_url"  data-url="try_and_buy" href="javascript:void(0); ">试用及购买</a></li>
-            </ul>
-
-            <ul class="sn-sm-item">
-                <li class="title js_location_url" data-url="solution"  >解决方案</li>
-                <li><a class="info js_location_url"  data-url="game_industry" href="javascript:void(0); ">游戏行业 </a></li>
-                <li><a class="info js_location_url"  data-url="manage_industry" href="javascript:void(0); ">管理行业</a></li>
-                <li><a class="info js_location_url"  data-url="architecture_industry" href="javascript:void(0); ">建筑行业</a></li>
-                <li><a class="info js_location_url"  data-url="edu_and_doc" href="javascript:void(0); ">教育和文档</a></li>
-                <li><a class="info js_location_url"  data-url="common_industry" href="javascript:void(0); ">通用行业</a></li>
-            </ul>
-
-            <ul class="sn-sm-item">
-                <li class="title js_location_url" data-url="support" >支持与反馈</li>
-                <li><a class="info js_location_url"  data-url="su_download" href="javascript:void(0); ">下载中心</a></li>
-                <li><a class="info js_location_url"  data-url="su_problem" href="javascript:void(0); ">常见问题</a></li>
-                <li><a class="info js_location_url"  data-url="su_feedback" href="javascript:void(0); ">建议反馈</a></li>
-                <li><a class="info js_location_url"  data-url="su_contact" href="javascript:void(0); ">联系我们</a></li>
-            </ul>
-
-            <ul class="sn-sm-item">
-                <li class="title js_location_url text-center" data-url="we" >我们</li>
-                <li><a class="info js_location_url"  data-url="we_desc" href="javascript:void(0);">公司简介</a></li>
-                <li><a class="info js_location_url"  data-url="we_news" href="javascript:void(0);">公司新闻</a></li>
-                <li><a class="info js_location_url"  data-url="we_route" href="javascript:void(0);">成长历程</a></li>
-                <li><a class="info js_location_url"  data-url="we_intellectual" href="javascript:void(0);">知识产权</a></li>
-                <li><a class="info js_location_url"  data-url="we_property" href="javascript:void(0);">公司资质</a></li>
-                <li><a class="info js_location_url"  data-url="we_recruit" href="javascript:void(0);">诚聘精英</a></li>
-            </ul>
-
-            <ul class="sn-sm-item">
-                <li class="title js_location_url" data-url="index" >深思数盾</li>
-                <li><a id="BizQQWPA2"  class="info  open_qq"  href="javascript:void(0);"><img src="images/icons/qq.png">QQ</a></li>
-                <li><a class="info js_location_url"  data-url="wechat" href="javascript:void(0); "><img src="images/icons/wechat.png">微信</a></li>
-                <li><a class="info js_location_url"  data-url="area" href="javascript:void(0);"><img src="images/icons/area.png">选择地图</a></li>
-            </ul>
-
-            <ul class="sn-sm-item fr">
-                <li class="title text-center">扫描关注微信</li>
-                <li>
-                    <img width="138" src="images/qr-code.jpg">
-                </li>
-            </ul>
-        </div>
-    </section>
-
-
-
-    <!--公共footer-->
-    <footer class="sn-footer">
-        <div class="wrap clear-fix">
-            <div class="fl text-left">
-                <p>隐私条款 | 企业邮箱</p>
-                <p>北京市海淀区中关村大街甲59号文化大厦1706室</p>
-            </div>
-            <div class="fr text-right">
-                <p></p>
-                <p>版权所有 北京深思数盾科技股份有限公司 © 2016 京ICP备16009104号-1</p>
-            </div>
-        </div>
-    </footer>
-
-    <!--公共浮层-->
-    <aside class="sn-fix-menu">
-        <div class="mask"></div>
-        <a class="qq clear-fix" id='BizQQWPA' href="javascript:void(0); "></a>
-        <a class="mobile" href="tel:400-6506-701"></a>
-        <a class="qr" href="javascript:void(0); ">
-            <img src="images/float_layer/qr.png">
-        </a>
-        <a id="sn_go_top" class="up" href="javascript:void(0); "></a>
-    </aside>
-
+    <div id="footer"></div>
     <script src="scripts/jquery.min.js"></script>
     <script src="scripts/swiper-3.3.1.jquery.min.js"></script>
-    <script src="scripts/main.js"></script>
+    <script src="scripts/load.js"></script>
 </body>
 </html>
