over clock html

--- a/lock_jr5_std.html
+++ b/lock_jr5_std.html
@@ -14,30 +14,31 @@
     <img width="100%" src="images/slides/4.jpg">
 
     <!--page bar 所在位置-->
-    <!--page bar 所在位置-->
     <section class="sn-page-bar">
         <div class="cloud"></div>
         <div class="wrap text-left sn-pb-content">
             <span>您现在所在的位置：</span>
-            <span>加密锁</span>   <span>></span>
+            <span>产品</span>   <span>></span>
+            <span>硬件加密锁</span>   <span>></span>
             <span>精锐5</span>   <span>></span>
-            <span><a class="js_location_url" data-url="about_platform" href="javascript:void(0);">标准版</a></span> <span>|</span>
-            <span  class="active" >蓝牙版</span> <span>|</span>
-            <span><a class="js_location_url" data-url="ss_service" href="javascript:void(0);">U盘版</a></span>
+            <span  class="active" >标准版</span> <span>|</span>
+            <span><a class="js_location_url" data-url="picked_5_bt" href="javascript:void(0);">蓝牙版</a></span> <span>|</span>
+            <span><a class="js_location_url" data-url="picked_5_usb" href="javascript:void(0);">U盘版</a></span>
         </div>
     </section>
 
     <!--container list-->
+    <!--精锐 5 标准版-->
     <section class="sn-lock-detail border-bottom-blue">
         <div class="wrap text-left">
             <ul class="sn-nav-tabs ">
-                <li class="">
+                <li class="active">
                     <a data-id="#tab_1" href="javascript:void (0);" >产品信息</a>
                 </li>
                 <li class="">
                     <a data-id="#tab_2" href="javascript:void (0);" >技术参数</a>
                 </li>
-                <li class="active">
+                <li class="">
                     <a data-id="#tab_3" href="javascript:void (0);" >申请试用</a>
                 </li>
                 <li class="">
@@ -52,13 +53,13 @@
     <section class="sn-lock-detail">
         <div class="wrap text-left">
             <div class="sn-tab-content clear-fix">
-                <div id="tab_1" class="sn-tab-pane ">
+                <div id="tab_1" class="sn-tab-pane active">
                     <div class="fl sn-ld-pic">
-                        <img class="dn-ldp-preview" src="images/locks/l5.png">
+                        <img class="dn-ldp-preview" src="images/locks/l5_05.png">
                         <div class="dn-ldp-list border-top-grey">
-                            <img src="images/locks/l5.png">
-                            <img src="images/locks/l5.png">
-                            <img src="images/locks/l5.png">
+                            <img src="images/locks/l5_05.png">
+                            <img src="images/locks/l5_05.png">
+                            <img src="images/locks/l5_05.png">
                         </div>
                     </div>
                     <div class="fr sn-ld-detail">
@@ -92,7 +93,7 @@
                         USB 2.0全速通信<br>
                         与深思云锁无缝兼容<br>
                     </p>
-                    <p class="sn-ld-section-title margin-t-20">基本参数：</p>
+                    <p class="sn-ld-section-title ">基本参数：</p>
                     <table class="sn-ld-params">
                         <tr><td width="300">芯片安全等级</td><td>CC EAL5+</td><td width="300">原封全进口智能卡芯片</td></tr>
                         <tr><td>CPU</td><td>32位 ARM</td><td></td></tr>
@@ -118,7 +119,7 @@
                         <tr><td width="300">Windows</td><td>Windows XP以上</td><td width="300"></td></tr>
                     </table>
                 </div>
-                <div id="tab_3" class="sn-tab-pane active">
+                <div id="tab_3" class="sn-tab-pane ">
                     <p class="sn-ld-section-title">基本信息</p>
                     <div class="sn-input-inline margin-t-20">
                         <div class="sn-input-group">
@@ -166,8 +167,7 @@
                                 SS客户端安装包（sense_shield_installer_pub.exe）BuildVersion 8915 是深思精锐5加密锁客户端程序主要包括：精锐5产品驱动程序、网络锁驱动程序、SS服务主程序、许可管理工具、界面服务程序及CSP模块。
                             </p>
                             <div class="sn-ld-btn-list">
-                                <button class="sn-ld-btn download">SDK下载</button>
-                                <button class="sn-ld-btn">SDK下载</button>
+                                <button class="sn-ld-btn download js_location_url" data-url="picked_5_download">SDK下载</button>
                             </div>
                         </li>
                     </ul>
