--- a/header.html
+++ b/header.html
@@ -147,7 +147,7 @@
                     <li><a href="javascript:void(0);" data-url="we_news" class="js_location_url" >公司新闻</a></li>
                     <li><a href="javascript:void(0);" data-url="we_route" class="js_location_url" >成长历程</a></li>
                     <li><a href="javascript:void(0);" data-url="we_intellectual" class="js_location_url" >知识产权</a></li>
-                    <li><a href="javascript:void(0);" data-url="we_property" class="js_location_url" >公司性质</a></li>
+                    <li><a href="javascript:void(0);" data-url="we_property" class="js_location_url" >公司资质</a></li>
                     <li><a href="javascript:void(0);" data-url="we_recruit" class="js_location_url" >诚聘精英</a></li>
                 </ul>
             </div>
