--- a/cloud_lock.html
+++ b/cloud_lock.html
@@ -18,7 +18,7 @@
     <section class="sn-page-bar">
         <div class="cloud"></div>
         <div class="wrap text-left sn-pb-content">
-            <span>您现在所在的位置：</span>
+            <span>您现在的位置：</span>
             <span>云授权</span>   <span>></span>
             <span><a class="js_location_url" data-url="about_platform" href="javascript:void(0);">了解云授权平台</a></span> <span>|</span>
             <span  class="active" >云锁服务</span> <span>|</span>
