--- a/feedback.html
+++ b/feedback.html
@@ -15,8 +15,8 @@
     <section class="sn-page-bar">
         <div class="cloud"></div>
         <div class="wrap text-left sn-pb-content">
-            <span>您现在所在的位置：</span>
-            <span>支持</span> <span>></span>
+            <span>您现在的位置：</span>
+            <span>资源</span> <span>></span>
             <span class="active">建议反馈</span>
         </div>
     </section>
