--- a/user_tools.html
+++ b/user_tools.html
@@ -17,7 +17,7 @@
     <section class="sn-page-bar">
         <div class="cloud"></div>
         <div class="wrap text-left sn-pb-content">
-            <span>您现在所在的位置：</span>
+            <span>您现在的位置：</span>
             <span>专业工具</span>   <span>></span>
             <span><a class="js_location_url" data-url="vp_tools" href="javascript:void(0)">VIRBOX PROTECTOR</a></span>    <span>|</span>
             <span><a class="js_location_url" data-url="auth_tools"  href="javascript:void(0)">授权管理工具</a></span><span>|</span>
