--- a/we_route.html
+++ b/we_route.html
@@ -16,7 +16,7 @@
     <section class="sn-page-bar">
         <div class="cloud"></div>
         <div class="wrap text-left sn-pb-content">
-            <span>您现在所在的位置：</span>
+            <span>您现在的位置：</span>
             <span>我们</span> <span>></span>
             <span class="active">成长历程</span>
         </div>
