--- a/lock_jr5_std.html
+++ b/lock_jr5_std.html
@@ -17,7 +17,7 @@
     <section class="sn-page-bar">
         <div class="cloud"></div>
         <div class="wrap text-left sn-pb-content">
-            <span>您现在所在的位置：</span>
+            <span>您现在的位置：</span>
             <span>产品</span>   <span>></span>
             <span>硬件加密锁</span>   <span>></span>
             <span>精锐5</span>   <span>></span>
