--- a/platform_intro.html
+++ b/platform_intro.html
@@ -17,7 +17,7 @@
     <section class="sn-page-bar">
         <div class="cloud"></div>
         <div class="wrap text-left sn-pb-content">
-            <span>您现在所在的位置：</span>
+            <span>您现在的位置：</span>
             <span>云授权</span>   <span>></span>
             <span class="active">了解云授权平台</span> <span>|</span>
             <span><a class="js_location_url" data-url="cloud_lock" href="javascript:void(0);">云锁服务</a></span> <span>|</span>
