--- a/problem.html
+++ b/problem.html
@@ -16,8 +16,8 @@
     <section class="sn-page-bar">
         <div class="cloud"></div>
         <div class="wrap text-left sn-pb-content">
-            <span>您现在所在的位置：</span>
-            <span>支持</span> <span>></span>
+            <span>您现在的位置：</span>
+            <span>资源</span> <span>></span>
             <span class="active">常见问题</span>
         </div>
     </section>
