add home animate

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
         </div>
     </section>
 
-    <section id="sn_phc_menu_1" class="sn-phc-item border-bottom-grey">
-        <div class="wrap clear-fix text-left">
+    <section  class="sn-phc-item border-bottom-grey">
+        <div id="sn_phc_menu_1" class="wrap clear-fix text-left sn_phc_menu">
             <div class="snphc-desc fl">
                 <div class="sn-phcd-center">
 
@@ -110,8 +110,8 @@
         </div>
     </section>
 
-    <section id="sn_phc_menu_2" class="sn-phc-item border-bottom-grey">
-        <div class="wrap clear-fix text-left">
+    <section class="sn-phc-item border-bottom-grey">
+        <div id="sn_phc_menu_2"  class="wrap clear-fix text-left sn_phc_menu">
             <div class="snphc-desc fl">
                 <div class="sn-phcd-center">
 
@@ -133,8 +133,8 @@
     </section>
 
 
-    <section id="sn_phc_menu_3" class="sn-phc-item border-bottom-grey">
-        <div class="wrap clear-fix text-left">
+    <section class="sn-phc-item border-bottom-grey">
+        <div id="sn_phc_menu_3" class="wrap clear-fix text-left sn_phc_menu">
             <div class="snphc-desc fl">
                 <div class="sn-phcd-center">
 
@@ -155,8 +155,8 @@
         </div>
     </section>
 
-    <section id="sn_phc_menu_4" class="sn-phc-item border-bottom-grey">
-        <div class="wrap clear-fix text-left">
+    <section class="sn-phc-item border-bottom-grey">
+        <div  id="sn_phc_menu_4"  class="wrap clear-fix text-left sn_phc_menu">
             <div class="snphc-desc fl">
                 <div class="sn-phcd-center">
 
@@ -204,6 +204,7 @@
     <div id="footer"></div>
     <script src="scripts/jquery.min.js"></script>
     <script src="scripts/swiper-3.3.1.jquery.min.js"></script>
+    <script src="scripts/move.min.js"></script>
     <script src="scripts/load.js"></script>
 
 </body>
