--- a/header.html
+++ b/header.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="styles/font-awesome.css">
+
 <!--公共header-->
 <header class="bg-white  sn-header text-left">
     <div class="wrap clear-fix">
@@ -133,10 +135,22 @@
             <!--</div>-->
             <div>
                 <a href="javascript:void(0);" data-url="support" class="js_location_url" >资源</a>
-                <ul class="sub-menu ">
+                <ul class="sub-menu">
                     <li><a href="javascript:void(0);" data-url="su_download" class="js_location_url" >下载中心</a></li>
-                    <li><a href="javascript:void(0);" data-url="solution" class="js_location_url" >解决方案</a></li>
-                    <li><a href="javascript:void(0);" data-url="su_problem" class="js_location_url" >常见问题</a></li>
+                    <li>
+                        <a href="javascript:void(0);" data-url="solution" class="js_location_url" >解决方案<i class="icon-angle-right"></i></a>
+                        <ul class="sub-child-menu">
+                            <li><a href="javascript:void(0);" data-url="game_industry" class="js_location_url" >游戏行业</a></li>
+                            <li><a href="javascript:void(0);" data-url="manage_industry" class="js_location_url" >管理行业</a></li>
+                            <li><a href="javascript:void(0);" data-url="architecture_industry" class="js_location_url" >建筑行业</a></li>
+                            <li><a href="javascript:void(0);" data-url="edu_and_doc" class="js_location_url" >教育和文档</a></li>
+                            <li><a href="javascript:void(0);" data-url="common_industry" class="js_location_url" >通用行业</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="javascript:void(0);" data-url="su_problem" class="js_location_url" >常见问题</a>
+
+                    </li>
                     <li><a href="javascript:void(0);" data-url="su_feedback" class="js_location_url" >建议反馈</a></li>
                     <li><a href="javascript:void(0);" data-url="su_contact" class="js_location_url" >联系我们</a></li>
                 </ul>
