--- a/su_common.html
+++ b/su_common.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>软件加密狗_加密锁_授权管理_云加密|云授权平台-北京深思数盾</title>
-    <link rel="stylesheet" href="styles/font-awesome.css">
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/swiper-3.3.1.min.css">
     <script charset="utf-8" type="text/javascript" src="http://wpa.b.qq.com/cgi/wpa.php?key=XzkzODA1NDQ1OF8zNTQwMDNfNDAwNjUwNjcwMV8"></script>
@@ -24,8 +23,12 @@
         <div class="cloud"></div>
         <div class="wrap text-left sn-pb-content">
             <span>您现在的位置：</span>
-            <span>资源</span> <span>></span>
             <span>解决方案</span> <span>></span>
+            <span><a class="js_location_url" data-url="game_industry" href="javascript:void(0);">游戏行业</a></span> <span>|</span>
+            <span><a class="js_location_url" data-url="manage_industry" href="javascript:void(0);">管理行业</a></span> <span>|</span>
+            <span><a class="js_location_url" data-url="architecture_industry" href="javascript:void(0);">建筑行业</a></span> <span>|</span>
+            <span><a class="js_location_url" data-url="edu_and_doc" href="javascript:void(0);">教育和文档</a></span> <span>|</span>
+            <!--<span><a class="js_location_url" data-url="common_industry" href="javascript:void(0);">通用行业</a></span>-->
             <span class="active">通用行业</span>
         </div>
     </section>
