--- a/su_art.html
+++ b/su_art.html
@@ -24,9 +24,13 @@
         <div class="cloud"></div>
         <div class="wrap text-left sn-pb-content">
             <span>您现在的位置：</span>
-            <span>资源</span> <span>></span>
             <span>解决方案</span> <span>></span>
-            <span class="active">建筑行业</span>
+            <span><a class="js_location_url" data-url="game_industry" href="javascript:void(0);">游戏行业</a></span> <span>|</span>
+            <span><a class="js_location_url" data-url="manage_industry" href="javascript:void(0);">管理行业</a></span> <span>|</span>
+            <!--<span><a class="js_location_url" data-url="architecture_industry" href="javascript:void(0);">建筑行业</a></span> <span>|</span>-->
+            <span class="active">建筑行业</span><span>|</span>
+            <span><a class="js_location_url" data-url="edu_and_doc" href="javascript:void(0);">教育和文档</a></span> <span>|</span>
+            <span><a class="js_location_url" data-url="common_industry" href="javascript:void(0);">通用行业</a></span>
         </div>
     </section>
 
